--- a/css/style.css
+++ b/css/style.css
@@ -15,28 +15,33 @@
     --mainpoppins: 'Poppins', sans-serif;
     --autosora   : 'Sora', sans-serif;
 }
+
 .section-rose {
     background-color: var(--mainrose);
 }
-.section-yellow{
+
+.section-yellow {
     background-color: var(--mainyellow);
 }
 
 .gradient-mn-bk-rs {
-    background: linear-gradient(90deg, rgba(54,52,64,1) 33%, rgba(217,151,137,1) 66%);
-    height: 4px;
+    background: linear-gradient(90deg, rgba(54, 52, 64, 1) 33%, rgba(217, 151, 137, 1) 66%);
+    height    : 4px;
 }
-.gradient-mn-bk-yw{
-    background: linear-gradient(90deg, rgba(54,52,64,1) 33%, rgba(242,203,155,1) 66%);
-    height: 4px;
+
+.gradient-mn-bk-yw {
+    background: linear-gradient(90deg, rgba(54, 52, 64, 1) 33%, rgba(242, 203, 155, 1) 66%);
+    height    : 4px;
 }
-.gradient-mn-rs-bk{
-    background: linear-gradient(90deg, rgba(217,151,137,1) 33%, rgba(54,52,64,1) 66%);
-    height: 4px;
+
+.gradient-mn-rs-bk {
+    background: linear-gradient(90deg, rgba(217, 151, 137, 1) 33%, rgba(54, 52, 64, 1) 66%);
+    height    : 4px;
 }
-.gradient-mn-yw-rs{
-    background: linear-gradient(90deg, rgba(242,203,155,1) 33%, rgba(217,151,137,1) 66%);
-    height: 4px;
+
+.gradient-mn-yw-rs {
+    background: linear-gradient(90deg, rgba(242, 203, 155, 1) 33%, rgba(217, 151, 137, 1) 66%);
+    height    : 4px;
 }
 
 html {
@@ -73,9 +78,19 @@ a:hover {
     text-decoration: none;
 }
 
-img{
+article a {
+    color: var(--mainyellow);
+}
+
+article a:hover {
+    color          : var(--mainwhite);
+    text-decoration: none;
+}
+
+img {
     width: 100%;
 }
+
 /* Intro styles*/
 #presentation {
     padding  : 4rem 1rem 10rem 1rem;
@@ -109,47 +124,52 @@ img{
 }
 
 /*Proyect section */
-#projects{
+#projects {
     padding: 4rem 1rem;
-    color: var(--mainblack);
+    color  : var(--mainblack);
 }
-#projects h2{
-    font-size: 2.5rem;
+
+#projects h2 {
+    font-size    : 2.5rem;
     margin-bottom: calc(2.5rem * 1.5);
 }
-#projects h3{
+
+#projects h3 {
     color: var(--mainorange);
 }
-#projects h4{
-    font-size: 1rem;
+
+#projects h4 {
+    font-size  : 1rem;
     font-family: var(--autosora);
-    margin: 0;
+    margin     : 0;
 }
-.description-box{
-    padding: 1rem;
-    border-radius: 10px;
+
+.description-box {
+    padding         : 1rem;
+    border-radius   : 10px;
     background-color: var(--mainrose);
-    color: var(--mainwhite);
-    font-size: 1rem;
-    line-height: 2.5;
+    color           : var(--mainwhite);
+    font-size       : 1rem;
+    line-height     : 2.5;
 }
 
 #projects ul {
     list-style-type: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    flex-flow: row wrap;
+    padding        : 0;
+    margin         : 0;
+    display        : flex;
+    flex-flow      : row wrap;
     justify-content: flex-start;
-    gap: 1rem;
-    font-size: 1rem;
+    gap            : 1rem;
+    font-size      : 1rem;
 }
+
 #projects img {
-    margin: 2rem 0 4rem 0;
-    border-left: 1px solid var(--mainwhite);
-    border-top: 1px solid var(--mainwhite);
+    margin       : 2rem 0 4rem 0;
+    border-left  : 1px solid var(--mainwhite);
+    border-top   : 1px solid var(--mainwhite);
     border-radius: 25px;
-    padding: 1rem;
+    padding      : 1rem;
 }
 
 
@@ -312,38 +332,46 @@ footer .footer-icon {
         margin-right: auto;
 
     }
-    article{
-        display: grid;
+
+    article {
+        display              : grid;
         grid-template-columns: repeat(10, 1fr);
-        gap: 1rem;
+        gap                  : 1rem;
     }
-    #projects{
+
+    #projects {
         max-width: 1200px;
-        margin: 0 auto;
+        margin   : 0 auto;
     }
-    #projects img{
+
+    #projects img {
         grid-column: 1/6;
-        grid-row: 1/2;
+        grid-row   : 1/2;
     }
-    .text-box{
+
+    .text-box {
         grid-column: 5/11;
-        grid-row: 1/2;
-        order: 2;
-        text-align: right;
+        grid-row   : 1/2;
+        order      : 2;
+        text-align : right;
     }
-    #projects ul{
+
+    #projects ul {
         justify-content: flex-end;
     }
-    #projects .reverse .text-box{
+
+    #projects .reverse .text-box {
         grid-column: 1/7;
-        order: 2;
-        text-align: left;
+        order      : 2;
+        text-align : left;
     }
-    #projects .reverse img{
+
+    #projects .reverse img {
         grid-column: 6/11;
-        grid-row: 1/2;
+        grid-row   : 1/2;
     }
-    #projects .reverse ul{
+
+    #projects .reverse ul {
         justify-content: flex-start;
     }
 }
